# dd_collaborative_computing

curr_test/: CMakeLists.txt
curr_test/_idea/: deployment.xml  other.xml  workspace.xml
curr_test/_vs/: VSWorkspaceState.json  cmake.db  slnx.sqlite
curr_test/_vs/curr_test/v16/: _suo
curr_test/include/: PHE.cpp  PHE.h
curr_test/test/: main.cpp
